--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@ body {
     font-family: "roboto", sans-serif;
 }
 
+.container-wrapper {}
+
+.container-wrapper--red {
+    background-color: #f05f40;
+    color: white;
+}
+
 .alert-container .col-12 {
     padding-left: 0;
     padding-right: 0;
@@ -41,16 +48,42 @@ body {
 .quotes-container   {}
 .features-container {}
 
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
+.quotes .page-header {
+    margin-bottom: 25px;
+}
+
 .block-dividers {
     width: 75px;
     height: 5px;
     border: 0;
+    background-color: #444;
 }
+
 .block-dividers--orange {
     background-color: #f05f40;
 }
+
+.block-dividers--white {
+    background-color: white;
+}
+
 .block-dividers--short  {
     width: 35px;
+}
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 .navalert-container {
@@ -117,4 +150,25 @@ body {
 .btn--red:active:focus {
     background-color: #df4929;
     border-color: #df4929;
+}
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.feature .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
